--- a/assets/scss/layout/_variables.scss
+++ b/assets/scss/layout/_variables.scss
@@ -487,8 +487,10 @@ $grid-breakpoints: (
   md: 768px,
   lg: 992px,
   xl: 1200px,
-  xxl: 1400px
-) !default;
+  xxl: 1400px,
+  isla: 1600px,
+); 
+// !default;
 // scss-docs-end grid-breakpoints
 
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
@@ -505,8 +507,10 @@ $container-max-widths: (
   md: 720px,
   lg: 960px,
   xl: 1140px,
-  xxl: 1320px
-) !default;
+  xxl: 1320px,
+  isla: 1440px,
+);
+// !default;
 // scss-docs-end container-max-widths
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
